# sbitx

./: .gitignore  CMakeLists.txt  Makefile  README.md  build  cleanup.sh  coding_convention.txt  commands.txt  config.txt  fft_filter.c  fldigi.c  hamlib.c  hamlib.h  hostname  hosts  how_gui_is_organized.txt  i2cBitBangingBus.cpp  i2cBitBangingBus.h  i2cbb.c  i2cbb.h  ini.c  ini.h  install.txt  k3ngbuild  logbook.c  logbook.h  macros.c  modem_cw.c  modem_cw.h  modem_ft8.c  modem_ft8.h  modems.c  mongoose.c  queue.c  queue.h  release_notes.txt  remote.c  remote.h  resampler.c  sBitx.desktop  (+33 more)
CMake/: FFTWConfig.cmake  cmake_uninstall.cmake.in
data/: create_db.sql  default_hw_settings.ini  default_settings.ini  hw_settings.ini  hw_settings_v3.ini  run.mc  sp.mc  user_settings.ini
doc/: coding_convention.md  commands.md  hellov2.md  how_gui_is_organized.md  install.md  ui_notes.md  wsjtx_notes.md
ft8_lib/: Makefile  a.out  decode_ft8.c  decode_ft82.c  ft8_shell.c  gen_ft8.c  test  txt
ft8_lib/ft8/: decode.c  decode.h
web/: CQWWRUN.mc  CW1.mc  FT8.mc  Makefile  RUN.mc  SP.mc  dxc.list  ft8.mc  index.html  index.html~  index_old.html  index_test.html  indexv2.html  jogDial.js  logbook.html  pcm-player.js  style.css  style_old.css  web_controls.txt
